# mcconsole

./: .gitignore  README.md  install.fezi
.github/workflows/: cli-installer-release.yml  mod-release.yml
cli/: README.md  pyproject.toml
cli/mcconsole/: __init__.py  __main__.py  aliases.py  completer.py  discovery.py  history.py  lexer.py  protocol.py
mod/: BUILD_NOTES.md  LICENSE  build.gradle  gradle.properties  settings.gradle
mod/gradle/wrapper/: gradle-wrapper.properties
mod/src/main/java/dev/sushii/mcconsole/: CommandBridge.java  ConsoleServer.java  McConsoleClient.java  McConsoleConfig.java  PortFile.java
mod/src/main/resources/: fabric.mod.json
scripts/: build_installer.py
